--- a/website/template/includes/_header.html
+++ b/website/template/includes/_header.html
@@ -10,7 +10,7 @@
 
 		<link href="http://fonts.googleapis.com/css?family=PT+Sans:400italic,400,700italic,700" rel="stylesheet" type="text/css">
 
-		<!-- @stylesheet normalize fonts style prettify -->
+		<!-- @stylesheet normalize style prettify -->
 		<!-- @javascript jquery-1.8.3.min app prettify konami -->
 
 		<link href="<!-- @path favicon.ico -->" rel="shortcut icon">
